<resources>
    <string name="app_name">Dream</string>
    <string-array name="generos">
        <item>Masculino</item>
        <item>Feminino</item>
    </string-array>
    <string name="date_format">%1$d/%2$d/%3$d</string>
    <string-array name="UF">
        <item>AC</item>
        <item>AL</item>
        <item>AL</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>
    </string-array>
    <string name="about_us">
        O Hotel Dream é um hotel de tradição na região, estando no mercado há mais de 20 anos, sendo administrado por um casal.<br />
        O hotel disponibiliza quartos luxuosos e standars.<br />
        Todos os quartos tem acesso Wi-FI gratuito.
    </string>
    <string name="goal">
        Fornecer quartos de alta qualidade de tipos variados, para todos os hóspedes
    </string>
    <string name="vision">
        Satisfazer nossos clientes,<br />
        fornecendo a hospedagem que ele procura
    </string>
    <string name="values">
        Competência, transparência, efetividade e ética
    </string>
    <string name="phones_about_us">
        <b>Tel:</b> (00) 0000-0000 (00) <b>Cel:</b> 00000-0000
    </string>
    <string name="email_about_us">
        contato@hoteldream.com.br
    </string>

</resources>