<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".view.AboutUs">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
        android:paddingVertical="45dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="45dp"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@null"
                android:paddingRight="18dp"
                android:onClick="goBack"
                app:srcCompat="@drawable/ic_go_back" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="Sobre nós"
                android:textColor="@color/primary"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:background="@drawable/card"
            android:padding="30dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_height="80dp"
                    app:srcCompat="@drawable/ic_about_us" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:textSize="20sp"
                    android:textColor="@color/primary"
                    android:text="Sobre a gente" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textSize="14sp"
                android:textColor="@color/primary"
                android:text="@string/about_us" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:background="@drawable/card"
            android:padding="30dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|end"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:textSize="20sp"
                    android:textColor="@color/primary"
                    android:text="Nossos objetivos" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_height="80dp"
                    app:srcCompat="@drawable/ic_goal" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textSize="14sp"
                android:textAlignment="textEnd"
                android:text="@string/goal"
                android:textColor="@color/primary"
                android:gravity="end" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:background="@drawable/card"
            android:padding="30dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_height="80dp"
                    app:srcCompat="@drawable/ic_vision" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:textSize="20sp"
                    android:textColor="@color/primary"
                    android:text="Nossa visão" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textSize="14sp"
                android:textColor="@color/primary"
                android:text="@string/vision" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:background="@drawable/card"
            android:padding="30dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|end"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:textSize="20sp"
                    android:textColor="@color/primary"
                    android:text="Nossos valores" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_height="80dp"
                    app:srcCompat="@drawable/ic_values" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textSize="14sp"
                android:textAlignment="textEnd"
                android:text="@string/values"
                android:textColor="@color/primary"
                android:gravity="end" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card"
            android:padding="30dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_height="80dp"
                    app:srcCompat="@drawable/ic_phone"
                    android:layout_marginEnd="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:textSize="20sp"
                    android:textColor="@color/primary"
                    android:text="Entre em contato" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textSize="14sp"
                android:layout_marginBottom="7.5dp"
                android:textColor="@color/primary"
                android:text="@string/phones_about_us" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textSize="14sp"
                android:textColor="@color/primary"
                android:text="@string/email_about_us" />
        </LinearLayout>


    </LinearLayout>

</ScrollView>
